Update Shop + fixbug

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.210e0.js" charset="utf-8"></script>
+<script src="src/settings.15529.js" charset="utf-8"></script>
 
-<script src="main.925ef.js" charset="utf-8"></script>
+<script src="main.b2819.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
