--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Pirates Land</title>
+  <title>Cocos Creator | PiratesLand</title>
 
   <!--http://www.html5rocks.com/en/mobile/mobifying/-->
   <meta name="viewport"
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.15529.js" charset="utf-8"></script>
+<script src="src/settings.52ccd.js" charset="utf-8"></script>
 
-<script src="main.b2819.js" charset="utf-8"></script>
+<script src="main.bc27d.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
