--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.dbb32.js" charset="utf-8"></script>
+<script src="src/settings.7393d.js" charset="utf-8"></script>
 
-<script src="main.c408e.js" charset="utf-8"></script>
+<script src="main.c657d.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
