--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.22bd4.js" charset="utf-8"></script>
+<script src="src/settings.5bc52.js" charset="utf-8"></script>
 
-<script src="main.355dd.js" charset="utf-8"></script>
+<script src="main.48114.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
